# ChangeLog for games-puzzle/amoebax
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/amoebax/ChangeLog,v 1.7 2010/01/09 18:59:58 tupone Exp $

  09 Jan 2010; Tupone Alfredo <tupone@gentoo.org> amoebax-0.2.0.ebuild,
  +files/amoebax-0.2.0-aclocal.patch:
  Fix build with autoconf-2.65. Bug #297949 by flameeyes@gentoo.org

  13 Jun 2009; Tristan Heaven <nyhm@gentoo.org> amoebax-0.2.0.ebuild,
  +files/amoebax-0.2.0-glibc2.10.patch:
  Fix building with glibc-2.10, bug #273501

  26 Jun 2008; Santiago M. Mola <coldwind@gentoo.org> amoebax-0.2.0.ebuild:
  amd64 stable wrt bug #229497

  26 Jun 2008; Christian Faulhammer <opfer@gentoo.org> amoebax-0.2.0.ebuild:
  stable x86, bug 229497

  04 May 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/amoebax-0.2.0-gcc43.patch, amoebax-0.2.0.ebuild:
  Fix building with gcc-4.3

  19 Aug 2007; Christoph Mende <angelos@gentoo.org> amoebax-0.2.0.ebuild:
  Added ~amd64

*amoebax-0.2.0 (15 Aug 2007)

  15 Aug 2007; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +amoebax-0.2.0.ebuild:
  initial commit
