@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/amoebax/amoebax-0.2.0.ebuild,v 1.7 2010/01/09 18:59:58 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/amoebax/amoebax-0.2.0.ebuild,v 1.8 2010/10/18 16:37:19 mr_bones_ Exp $
 
 EAPI=2
 inherit autotools eutils games
@@ -14,10 +14,9 @@ SLOT="0"
 KEYWORDS="amd64 x86"
 IUSE=""
 
-RDEPEND="media-libs/libsdl
-	media-libs/sdl-image
-	media-libs/sdl-mixer"
-DEPEND="${RDEPEND}"
+DEPEND="media-libs/libsdl[audio,joystick,video]
+	media-libs/sdl-image[png]
+	media-libs/sdl-mixer[vorbis]"
 
 src_prepare() {
 	epatch \
@@ -26,13 +25,15 @@ src_prepare() {
 		"${FILESDIR}"/${P}-aclocal.patch
 	sed -i \
 		-e "/^SUBDIRS/s:doc ::" \
-		Makefile.am \
-		|| die "sed failed"
+		Makefile.am || die
 	sed -i \
 		-e "/^iconsdir/s:=.*:=/usr/share/pixmaps:" \
 		-e "/^desktopdir/s:=.*:=/usr/share/applications:" \
-		data/Makefile.am \
-		|| die "sed failed"
+		data/Makefile.am || die
+	sed -i \
+		-e '/Encoding/d' \
+		-e '/Icon/s/.svg//' \
+		data/amoebax.desktop || die
 	AT_M4DIR=m4 eautoreconf
 }
 
