@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/amoebax
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/amoebax/ChangeLog,v 1.7 2010/01/09 18:59:58 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/amoebax/ChangeLog,v 1.8 2010/10/18 16:37:19 mr_bones_ Exp $
+
+  18 Oct 2010; Michael Sterrett <mr_bones_@gentoo.org> amoebax-0.2.0.ebuild:
+  Add use deps; fix desktop file; tidy
 
   09 Jan 2010; Tupone Alfredo <tupone@gentoo.org> amoebax-0.2.0.ebuild,
   +files/amoebax-0.2.0-aclocal.patch:
